--- a/style.css
+++ b/style.css
@@ -5,18 +5,17 @@
     padding: 0;
 }
 
-body{
+body {
     background-color: black;
 }
 
 .main {
     background-image: url(assets/images/netflix\ bg.jpg);
-    background-size: max(2200px,100vw);
+    background-size: max(2200px, 100vw);
     background-repeat: no-repeat;
-    height: 95vh;
+    height: 90vh;
     background-position: center center;
     position: relative;
-    /* object-fit: cover; */
 }
 
 .main .box {
@@ -32,11 +31,15 @@ nav {
     max-width: 75vw;
     height: 81px;
     margin: auto;
-    /* background-color: red; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* margin-top: 20px; */
+}
+
+@media screen and (max-width: 500px) {
+    nav {
+        max-width: 90vw;
+    }
 }
 
 nav img {
@@ -52,7 +55,6 @@ nav button {
 
 .btn {
     padding: 7px 17px;
-    /* font-size: 15px; */
     border: none;
     border-radius: 5px;
     margin: 0 8px;
@@ -66,12 +68,13 @@ nav button {
     background-color: red;
     cursor: pointer;
 }
-.redb:hover{
+
+.redb:hover {
     background-color: rgb(204, 0, 0);
 }
 
 .nonb {
-    background-color: rgba(23,23,23,0.7);
+    background-color: rgba(23, 23, 23, 0.7);
     border: 1px solid rgba(217, 217, 217, 0.5);
     cursor: pointer;
 }
@@ -84,38 +87,38 @@ nav button {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     gap: 23px;
     padding: 0 30px;
 }
 
-.hero> :first-child{
+.hero> :first-child {
     font-size: 48px;
     font-weight: 900;
     text-align: center;
 }
 
-.hero> :nth-child(2){
+.hero> :nth-child(2) {
     font-size: 24px;
     font-weight: 400;
     text-align: center;
 }
 
-.hero> :nth-child(3){
+.hero> :nth-child(3) {
     font-size: 20px;
     font-weight: 400;
     text-align: center;
 }
 
-.seperation{
+.seperation {
     position: relative;
     height: 0.5rem;
     background-color: rgb(35, 35, 35);
     z-index: 11;
 }
 
-.btn-red{
+.btn-red {
     background-color: red;
     padding: 9px 22px;
     font-size: 24px;
@@ -130,26 +133,27 @@ nav button {
     gap: 11px;
     cursor: pointer;
 }
-.btn-red:hover{
+
+.btn-red:hover {
     background-color: rgb(204, 0, 0);
 }
 
-.hero-buttons{
+.hero-buttons {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 5px;
 }
 
-.btn-red img{
+.btn-red img {
     padding-top: 7px;
 }
 
-input{
+input {
     font-weight: 600;
     color: white;
     padding: 16px 138px 16px 16px;
-    background-color: rgba(23,23,23,0.7);
+    background-color: rgba(23, 23, 23, 0.7);
     font-size: 16px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: 1px solid rgba(217, 217, 217, 0.5);
@@ -157,76 +161,70 @@ input{
     cursor: text;
 }
 
-.first{
-    height: 590px;
+.first {
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     max-width: 80vw;
     margin: auto;
+    padding: 40px 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.imgvi{
+.imgvi {
     position: relative;
 }
 
-.imgvi img{
-    width: 35vw;
+.imgvi img {
+    width: 537px;
     position: relative;
     z-index: 10;
 }
 
-/* .imgvi video{
-    width: 332px;
+.imgvi video {
+    width: 450px;
     position: absolute;
-    top: 72px;
-    right: 67px;
-} */
-.imgvi video{
-    width: 463px;
-    position: absolute;
-    top: 51px;
-    right: 0;
+    top: 77px;
+    right: 14px;
 }
-.vi2 video{
+
+.vi2 video {
     width: 355px;
     position: absolute;
     top: 33px;
     right: 94px;
 }
 
-section.first > div{
+section.first>div {
     display: flex;
     flex-direction: column;
     gap: 8px;
 }
 
-section.first > div :nth-child(1){
+section.first>div :nth-child(1) {
     font-size: 48px;
     font-weight: bolder;
 }
 
-section.first > div :nth-child(2){
-    font-size:24px;
-    /* font-weight: bolder; */
+section.first>div :nth-child(2) {
+    font-size: 24px;
 }
 
-.faq{
+.faq {
     background-color: black;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.faq h2{
+.faq h2 {
     text-align: center;
     margin: 58px 0 25px 0;
     font-size: 48px;
     font-weight: 900;
 }
 
-.faqbut{
+.faqbut {
     display: flex;
     justify-content: space-between;
     width: 76vw;
@@ -239,23 +237,24 @@ section.first > div :nth-child(2){
     border: none;
     cursor: pointer;
 }
-.faqbut:hover{
+
+.faqbut:hover {
     transition: all 0.25s ease-in-out;
     background-color: #414141;
 }
 
-.lt{
+.lt {
     text-align: center;
     margin: 48px 0 25px 0;
     font-size: 20px;
     font-weight: 400;
 }
 
-.sbm{
+.sbm {
     margin-bottom: 64px;
 }
 
-footer{
+footer {
     color: rgba(255, 255, 255, 0.7);
     max-width: 76vw;
     margin: auto;
@@ -263,33 +262,49 @@ footer{
     font-weight: 400;
 }
 
-.co1{
+.co1 {
     font-size: 16px;
     margin: 65px 0 20px 0;
 }
-.co1 a{
+
+.co1 a {
     font-size: 16px;
     color: rgba(255, 255, 255, 0.7);
 }
 
-.f-grid{
+.f-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.f-grid a{
+@media screen and (max-width: 650px) {
+    .hero-buttons {
+        flex-wrap: wrap;
+    }
+
+    .btn-red {
+        padding: 3px 15px;
+        font-size: 16px;
+    }
+
+    input {
+        padding: 12px 90px 12px 16px;
+        font-size: 16px;
+    }
+}
+
+.f-grid a {
     color: rgba(255, 255, 255, 0.7);
 }
 
-.f-items{
+.f-items {
     display: flex;
     flex-direction: column;
     gap: 14px;
 }
 
-.f-btn{
+.f-btn {
     padding: 7px 17px;
-    /* font-size: 15px; */
     border: none;
     border-radius: 5px;
     margin: 20px 0;
@@ -297,13 +312,80 @@ footer{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
     font-size: 14px;
-    background-color: rgba(23,23,23,0.7);
+    background-color: rgba(23, 23, 23, 0.7);
     border: 1px solid rgba(217, 217, 217, 0.5);
     cursor: pointer;
 }
 
-.last{
+.last {
     font-size: 14px;
     color: rgba(255, 255, 255, 0.7);
     margin-bottom: 50px;
+}
+
+@media screen and (max-width: 1200px) {
+    .f-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .first {
+        flex-wrap: wrap;
+    }
+
+    .imgvi img {
+        width: 350px;
+    }
+
+    .imgvi video {
+        width: 270px;
+        top: 55px;
+        right: 30px;
+    }
+
+    .vi2 video {
+        width: 175px;
+    }
+
+}
+
+@media screen and (max-width: 950px) {
+    .f-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .hero> :first-child {
+        font-size: 32px;
+    }
+
+    .hero> :nth-child(2) {
+        font-size: 18px;
+    }
+
+    .hero> :nth-child(3) {
+        font-size: 18px;
+    }
+
+    section.first>div {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    section.first>div :nth-child(1) {
+        font-size: 32px;
+    }
+
+    section.first>div :nth-child(2) {
+        font-size: 18px;
+    }
+
+    .faq h2 {
+        font-size: 32px;
+    }
+
+    .faqbut {
+        font-size: 18px;
+    }
 }
