--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@ nav {
         max-width: 90vw;
     }
 }
+@media screen and (max-width: 360px) {
+    nav {
+        max-width: 100vw;
+        /* padding: 0 15px; */
+    }
+}
 
 nav img {
     width: 139px;
@@ -275,6 +281,7 @@ footer {
 .f-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
 }
 
 @media screen and (max-width: 650px) {
@@ -327,6 +334,7 @@ footer {
     .f-grid {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        padding-bottom: 8px;
     }
 
     .first {
@@ -353,6 +361,7 @@ footer {
     .f-grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        padding-bottom: 8px;
     }
 
     .hero> :first-child {
